Alterações na main

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-    
-
-        <div class="bg-image">
-            <h1>Projeto X</h1>
-            <h2>Descrição projeto XXXXXXXX</h2>
-        </div>
+        <!--Essa vai ser a versão principal do index.html do projeto  -->
+       
     </body>
 </html>
