Alterações na branch 'version_2'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-    
+        
+        <!-- Esse aqui vai ser a segunda versão do index.html -->
 
         <div class="bg-image">
             <h1>Projeto X</h1>
