Conclusão do container de Preços e Planos

--- a/html/index.html
+++ b/html/index.html
@@ -79,7 +79,7 @@
                             <button class="btn-green"> Saber mais </button>
                         </li>
                         <li>
-                            <h3>Básico</h3>
+                            <h3>Dedicado </h3>
                             <p>20 Subdomínios</p>
                             <p>25 contas de e-malil</p>
                             <p>C-painel</p>
@@ -87,7 +87,7 @@
                             <button class="btn-green"> Saber mais </button>
                         </li>
                         <li>
-                            <h3>Básico</h3>
+                            <h3>Dedicado Plus</h3>
                             <p>20 Subdomínios</p>
                             <p>25 contas de e-malil</p>
                             <p>C-painel</p>
@@ -95,7 +95,7 @@
                             <button class="btn-green"> Saber mais </button>
                         </li>
                         <li>
-                            <h3>Básico</h3>
+                            <h3>Cloud</h3>
                             <p>20 Subdomínios</p>
                             <p>25 contas de e-malil</p>
                             <p>C-painel</p>
